header和menu以及相关主题theme的修改

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MaterialTest" parent="Theme.Design.Light.NoActionBar">
+    <style name="Theme.MaterialTest" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#ffffff</item>
         <item name="colorPrimaryVariant">#E4F967</item>
