--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,17 @@
         <item name="colorPrimary">#ffffff</item>
         <item name="colorPrimaryVariant">#E4F967</item>
         <item name="colorOnPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">#E45e39</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="FruitActivityTheme" parent="Theme.MaterialTest">
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
